# lnmarkets-cli

./: Cargo.toml  README.md
.github/workflows/: release.yml
docs/: CNAD_Cybersecurity_Program.md
src/: daemon.rs  main.rs  stats.rs
src/agents/: flow.rs  macro_cal.rs  mod.rs  news.rs  pattern.rs
src/api/: auth.rs  client.rs  error.rs  mod.rs
src/cli/: account.rs  auth.rs  funding.rs  futures.rs  market.rs  mcp.rs  mod.rs  output.rs  recap.rs
src/config/: mod.rs
src/mcp/: mod.rs  server.rs  tools.rs
src/models/: funding.rs  futures.rs  market.rs  mod.rs  user.rs
src/recap/: calendar.rs  derivatives.rs  mod.rs  price.rs  sentiment.rs  types.rs
