[package]
name = "lnm"
version = "0.1.0"
edition = "2021"
description = "Command-line interface for LN Markets API v3"
license = "MIT"
repository = "https://github.com/ln-markets/lnm-cli"
keywords = ["bitcoin", "lightning", "trading", "futures", "cli"]
categories = ["command-line-utilities", "finance"]

[dependencies]
# CLI
clap = { version = "4.4", features = ["derive", "env"] }

# Async runtime
tokio = { version = "1.36", features = ["full"] }


# HTTP client (0.11 is more compatible with older rustc)
reqwest = { version = "0.11", features = ["json", "rustls-tls"], default-features = false }

# JSON serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Authentication (HMAC-SHA256)
hmac = "0.12"
sha2 = "0.10"
base64 = "0.21"

# Configuration
dirs = "5"
toml = "0.7"

# Error handling
thiserror = "1"
anyhow = "1"

# Time
chrono = { version = "0.4", features = ["serde"] }

# Output formatting
tabled = "0.14"
colored = "2"

# URL encoding
urlencoding = "2"

[dev-dependencies]
tokio-test = "0.4"

[[bin]]
name = "lnmarkets"
path = "src/main.rs"

[profile.release]
lto = true
strip = true
codegen-units = 1
